# non-profit

cuda/rgb-2-gray/: CMakeLists.txt  README.md
cuda/rgb-2-gray/include/: cuda_handler.h  rgb2gray.h
cuda/rgb-2-gray/src/: cuda_handler.cu  image.cpp  rgb2gray.cu
